[package]
name = "hey-peter-bot"
version = "0.1.0"
authors = ["Teddy Byron <ted@tedbyron.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# telegram bot
teloxide = "0.3"
teloxide-macros = "0.3"

# logging
log = "0.4.8"
pretty_env_logger = "0.4.0"

# async
tokio = { version =  "0.2.11", features = ["rt-threaded", "macros"] }

# webhooks
warp = "0.3"
reqwest = "0.11"
serde_json = "1.0"
